--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <title>LearnOrbit</title>
 </head>
 
-<body class="">
+<body class="font-container">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
