added meta tags in html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' https://clerk.accounts.dev/npm/@clerk/clerk-js@5/dist/clerk.browser.js;">
+
   <link class="h-25 w-5" rel="icon" type="image" href="/src/assets/learnorbit.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
