added meta description for the app

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-
+  <meta name="description"
+    content="Discover Learn Orbit – your ultimate platform for mastering new skills. Dive into interactive roadmaps, explore handpicked references, and tackle practical projects. Track your progress effortlessly and enjoy a seamless learning experience. Start your journey with us today!">
 
   <link class="h-25 w-5" rel="icon" type="image" href="/src/assets/learnorbit.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
